--- a/package.json
+++ b/package.json
@@ -9,18 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "font-awesome": "^4.7.0",
+    "framer-motion": "^11.1.7",
+    "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.3"
+    "react-icons": "^5.2.0",
+    "react-scroll": "^1.9.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@fortawesome/fontawesome-free": "^6.5.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.3"
+    "typescript": "^5"
   }
 }
